# CephForge

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
agent/: __init__.py  config.py  main.py
agent/core/: executor.py  reporter.py
agent/network/: __init__.py  profiler.py
cli/: __init__.py  main.py
common/: __init__.py  utils.py
common/messaging/: __init__.py  events.py  redis_client.py
common/models/: __init__.py  client.py  cluster.py  execution.py  metrics.py  workload.py
data/: scale.db
data/config/: manager.yaml
data/config/clients/: clients.yaml
data/config/clusters/: grim.yaml
data/executions/exec_20260121_204347_8c10adc2/: config.yaml  precheck_report.json
data/executions/exec_20260121_204456_dba9d433/: precheck_report.json
data/executions/exec_20260121_204954_4e704121/: config.yaml  precheck_report.json  summary.json
data/executions/exec_20260121_205752_4d15c0e4/: config.yaml  precheck_report.json  summary.json
data/executions/exec_20260121_205959_fdc000fd/: config.yaml  precheck_report.json
data/executions/exec_20260121_210127_85aaea50/: config.yaml  precheck_report.json  summary.json
data/executions/exec_20260121_212308_65d3afed/: config.yaml  (+1 more)
docker/: Dockerfile.agent  Dockerfile.manager  docker-compose.yaml
manager/: __init__.py  config.py  dependencies.py  main.py
manager/api/: __init__.py
manager/core/: __init__.py  execution_engine.py  workload_executor.py
manager/deployment/: __init__.py  agent_deployer.py  ssh_client.py
manager/prechecks/: __init__.py  runner.py
manager/storage/: __init__.py  data_store.py
tests/: __init__.py  conftest.py  test_data_store.py  test_execution_engine.py  test_models.py  test_redis_client.py  test_utils.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
(+68 files in other folders)
